--- a/docker-compose.demo.instance.yml
+++ b/docker-compose.demo.instance.yml
@@ -38,7 +38,7 @@ services:
           cpus: '0.5'
     # tmpfs for temporary files
     tmpfs:
-      - /tmp:noexec,nosuid,size=512m
+      - /tmp:noexec,nosuid,size=1024m
       - /run:noexec,nosuid,size=512m
     # Security hardening
     cap_drop:
@@ -101,8 +101,7 @@ services:
       # mounted volume by applying a shared SELinux label.
       - /usr/local/etc/fiscalismia-demo/certs/fullchain.pem:/etc/nginx/certs/fullchain.pem:ro,z
       - /usr/local/etc/fiscalismia-demo/certs/privkey.pem:/etc/nginx/certs/privkey.pem:ro,z
-    ports:
-      - 443:443
+    network_mode: host
     # Container Resource Usage
     deploy:
       resources:
@@ -115,14 +114,12 @@ services:
     ### SECURITY HARDENING (minimal required permissions)
     tmpfs:
       - /tmp:noexec,nosuid,size=256m # set as cache directory in nginx.demo.conf
-      - /var/run:noexec,nosuid,size=64m
     cap_drop:
       - ALL
     cap_add:
       # if binding to ports < 1024 also requires the following setting on the host:
       # echo "net.ipv4.ip_unprivileged_port_start=80" | sudo tee /etc/sysctl.d/nonroot_can_bind_to_low_ports.conf
       - NET_BIND_SERVICE
-      # - CAP_DAC_OVERRIDE # HACK: Bypass all file read, write, and execute permission checks.
     security_opt:
       - no-new-privileges:true
 
