--- a/docker-compose.demo.instance.yml
+++ b/docker-compose.demo.instance.yml
@@ -101,7 +101,8 @@ services:
       # mounted volume by applying a shared SELinux label.
       - /usr/local/etc/fiscalismia-demo/certs/fullchain.pem:/etc/nginx/certs/fullchain.pem:ro,z
       - /usr/local/etc/fiscalismia-demo/certs/privkey.pem:/etc/nginx/certs/privkey.pem:ro,z
-    network_mode: host
+    ports:
+      - 443:443
     # Container Resource Usage
     deploy:
       resources:
