--- a/terraform/hetzner-cloud/modules/hcloud_server/user_data/cloud-config.demo-instance.yml
+++ b/terraform/hetzner-cloud/modules/hcloud_server/user_data/cloud-config.demo-instance.yml
@@ -87,12 +87,14 @@ runcmd:
   # Lockdown private network interface access to minimal required config
   - |
     export OPTIONAL_BACKEND_DEMO_INGRESS_PORT=8443
+    export PODMAN_LISTENER_PORT_LIST="443,8443,5432"
     /root/scripts/nftables_lockdown_private_instances.sh \
       ${LOADBALANCER_PRIVATE_IP} \
       ${BASTION_HOST_PRIVATE_IP} \
       ${NAT_GATEWAY_PRIVATE_IP} \
       ${VIRTUAL_NETWORK_GATEWAY} \
-      $OPTIONAL_BACKEND_DEMO_INGRESS_PORT \
+      "$PODMAN_LISTENER_PORT_LIST" \
+      "$OPTIONAL_BACKEND_DEMO_INGRESS_PORT" \
       >> $logfile 2>&1
   ######################################################################################
   # reboots server for persistent network config to take effect
