--- a/terraform/hetzner-cloud/modules/hcloud_server/user_data/cloud-config.production-instances.yml
+++ b/terraform/hetzner-cloud/modules/hcloud_server/user_data/cloud-config.production-instances.yml
@@ -86,11 +86,13 @@ runcmd:
   - /root/scripts/install-network-hardening-tools.sh $logfile
   # Lockdown private network interface access to minimal required config
   - |
+    export PODMAN_LISTENER_PORT_LIST="443,8443"
     /root/scripts/nftables_lockdown_private_instances.sh \
       ${LOADBALANCER_PRIVATE_IP} \
       ${BASTION_HOST_PRIVATE_IP} \
       ${NAT_GATEWAY_PRIVATE_IP} \
       ${VIRTUAL_NETWORK_GATEWAY} \
+      "$PODMAN_LISTENER_PORT_LIST" \
       >> $logfile 2>&1
   # reboots server for network config to take effect
   - printf "\n# Rebooting server...\n" >> $logfile
